Portfolio section mobile fixes

--- a/assets/scss/_work.scss
+++ b/assets/scss/_work.scss
@@ -23,10 +23,6 @@
             }
 
             .project-section {
-                // display: grid;
-                // grid-template-columns: 1fr 1fr;
-                // gap: 10px;
-
                 .project-box {
                     position: relative;
                     padding: 30px;
@@ -107,6 +103,42 @@
             }
         }
     }
+    .footer-mobile {
+        display: none;
+        .footer-mobile-container {
+            width:90%;
+            margin:auto;
+            padding: 10px 0;
+            .footer-block {
+                text-align: center;
+                margin:2px 0;
+                p{
+                    font-size: 0.8rem;
+                    font-weight: 400;
+                    letter-spacing: 1px;
+                    color: #fefefe;
+                    a {
+                        text-decoration: none;
+                        color: $color3;
+                    }
+                }
+                .icon-section {
+                    a {
+                        color: #ffffff;
+                        text-decoration: none;
+                        font-size: 1.2rem;
+                        padding: 0 12px; 
+                        &:first-child {
+                            padding: 0 12px 0 0;
+                        }
+                        &:last-child {
+                            padding: 0 0 0 12px;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 
@@ -138,7 +170,8 @@
                 font-size: 1rem;
             }
             .info-box {
-                bottom: 15px;
+                bottom: 0;
+                display:none;
                 h4 {
                     font-size:1em;
                     margin: 0.3rem 0;
@@ -151,7 +184,7 @@
         .content-area {
             margin-left: 0;
             width: 100%;
-            height: 70vh;
+            height: 84vh;
             &:after {
                 content: "";
                 display: table;
@@ -179,8 +212,9 @@
                 .work-section {
                     .project-section {
                         .project-box {
+                            margin-top: 15px;
                             .grey-bg {
-                                top:60%;
+                                top:50%;
                                 opacity:1;
                                 .project-info {
                                     bottom:-20%;
@@ -193,6 +227,9 @@
                     }
                 }
             }
+        }
+        .footer-mobile {
+            display: block;
         }
     }
 }
